# ctgui

./: CMakeLists.txt  CTgui.desktop  CTgui.desktop.in  additional_classes.cpp  additional_classes.h  ctgui.pro  ctgui.qrc  ctgui_mainwindow.cpp  ctgui_mainwindow.h  ctgui_mainwindow.ui  ctgui_variables.ui  detector.cpp  detector.h  indicators.hpp  listOfKnownShutters.ini  main.cpp  positionlist.cpp  positionlist.h  positionlist.ui  script.ui  shutter.cpp  shutter.h  shutter.ui  triggct.cpp  triggct.h  upvorcom.ui  ushutterconf.ui  writeerrordialog.cpp  writeerrordialog.h  writeerrordialog.ui  xli.template
BCTscripts/: EigerPPS_NoShift.sh  EigerPPS_Shifter.sh  PositionVerificationScoutingImage.sh  ShiftedBGs.sh  StaticBGs.sh  StaticSAMPLE.sh  XineosBGs.sh  XineosPPS_NoShift.sh  changeTopDirInAllShellScripts.sh  loopBG.sh  motorscanConfigBragg1.txt  motorscanConfigExpanderTilt.txt  motorscanConfigGonio.txt  processingBashScriptExplanation.sh  todayScripts.txt
BCTscripts/oldScripts/: EigerAloop.sh  EigerShifter.sh
libexec/: ctgui.log.sh  pss.ct.sh
scripts/: EigThr.sh  EigerPPS.sh  GetDataFromZebra.sh  SinS.sh  motion_detector.sh  preScan.inregular_z_step.sh
